Revisión del carousel, igualación del tamaño de las imágenes y fix de overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,3 +91,11 @@ body{
 a:link, a:visited, a:active {
     text-decoration:none;
 }
+
+
+/****************************/
+.carousel-image{
+    height: 12rem;
+    width: auto;
+    display: block;
+}
